--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
 
           <label for="subject">Message</label><label id="messagelbl" style="display: block;text-align: center;color:red;"></label>
           <textarea id="subject" name="subject" placeholder="Write your message to First Down" style="height:200px"></textarea>
-          <input  class="contacto" type="submit" value="Enviar">
+          <input  class="contacto" type="submit" value="Send">
         </form>
       </div>
 <footer class="text-center text-lg-start mt-5" style="background-color: rgba(0, 0, 0, 0.2)">
