--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
             <a class="nav-link" href="standings.html">Standings</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Contact.html">Contact us</a>
+          <a class="nav-link" href="contact.html">Contact us</a>
       </li>
     </ul>
 </nav>
